--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -186,16 +186,11 @@ jobs:
           destination_folder: 'dist/info'
           user_email: 'github-actions[bot]@users.noreply.github.com'
           user_name: 'github-actions[bot]'
-          commit_message: 'Submit melondsds_libretro.info for melonDS DS release v${{ steps.changelog.outputs.version }}'
+          commit_message: 'Submit melondsds_libretro.info for melonDS DS release v${{ steps.changelog.outputs.version }} on behalf of @${{ github.triggering_actor }}'
 
       - name: Open Pull Request
         if: "${{ steps.changelog.outputs.version != steps.newest-tag.outputs.version }}"
         working-directory: libretro-super
         env:
           GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
-        run: |
-          gh pr create \
-            --title "Add melondsds_libretro.info for release v${{ steps.changelog.outputs.version }}" \
-            --fill \
-            --base master \
-            --repo ${{ github.actor }}:libretro-super
+        run: gh pr create --fill --repo "${{ github.actor }}/libretro-super"
