--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -196,4 +196,4 @@ jobs:
         run: |
           git pull
           git checkout "release-v${{ steps.changelog.outputs.version }}"
-          gh pr create --fill --repo "${{ github.actor }}/libretro-super"
+          gh pr create --fill --repo "libretro/libretro-super"
