Add tvOS to bug-report.yml

--- a/.github/ISSUE_TEMPLATE/bug-report.yml
+++ b/.github/ISSUE_TEMPLATE/bug-report.yml
@@ -89,6 +89,7 @@ body:
         - label: Linux
         - label: Android
         - label: iOS
+        - label: tvOS
         - label: Other (specify below)
     validations:
       required: true
