--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -195,7 +195,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
         run: |
           git remote -v
-          git remote add --fetch --tags upstream master https://github.com/libretro/libretro-super
+          git remote add --fetch --tags upstream https://github.com/libretro/libretro-super
           git pull
           git checkout "release-v${{ steps.changelog.outputs.version }}"
           gh pr create --fill --repo "libretro/libretro-super"
