Add a CoreState object
- All global state will eventually be moved into here
- For now, it will just house the `NDS` instance

--- a/src/libretro/CMakeLists.txt
+++ b/src/libretro/CMakeLists.txt
@@ -25,6 +25,8 @@ add_library(melondsds_libretro MODULE
     config/definitions/video.hpp
     content.cpp
     content.hpp
+    core.cpp
+    core.hpp
     dsi.cpp
     dsi.hpp
     environment.cpp
