Allow specific tests to be disabled

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -66,7 +66,7 @@ cmake_path(GET DSI_NAND FILENAME DSI_NAND_NAME)
 include(CMakePrintHelpers)
 
 function(add_retroarch_test)
-    set(options WILL_FAIL ARM7_BIOS ARM9_BIOS ARM7_DSI_BIOS ARM9_DSI_BIOS NDS_FIRMWARE DSI_FIRMWARE DSI_NAND NO_SKIP_ERROR_SCREEN)
+    set(options WILL_FAIL ARM7_BIOS ARM9_BIOS ARM7_DSI_BIOS ARM9_DSI_BIOS NDS_FIRMWARE DSI_FIRMWARE DSI_NAND NO_SKIP_ERROR_SCREEN DISABLED)
     set(oneValueArgs NAME MAX_FRAMES CONTENT REQUIRE_FILE_SIZE_UNCHANGED REQUIRE_FILE_CREATED)
     set(multiValueArgs CORE_OPTION PASS_REGULAR_EXPRESSION FAIL_REGULAR_EXPRESSION SKIP_REGULAR_EXPRESSION)
     cmake_parse_arguments(PARSE_ARGV 0 RETRO "${options}" "${oneValueArgs}" "${multiValueArgs}")
@@ -137,10 +137,14 @@ function(add_retroarch_test)
     if (RETRO_WILL_FAIL)
         set_tests_properties("${RETRO_NAME}" PROPERTIES WILL_FAIL TRUE)
     endif()
+
+    if (RETRO_DISABLED)
+        set_tests_properties("${RETRO_NAME}" PROPERTIES DISABLED TRUE)
+    endif()
 endfunction()
 
 function(add_emutest_test)
-    set(options WILL_FAIL ARM7_BIOS ARM9_BIOS ARM7_DSI_BIOS ARM9_DSI_BIOS NDS_FIRMWARE DSI_FIRMWARE DSI_NAND NO_SKIP_ERROR_SCREEN)
+    set(options WILL_FAIL ARM7_BIOS ARM9_BIOS ARM7_DSI_BIOS ARM9_DSI_BIOS NDS_FIRMWARE DSI_FIRMWARE DSI_NAND NO_SKIP_ERROR_SCREEN DISABLED)
     set(oneValueArgs NAME TEST_SCRIPT CONTENT)
     set(multiValueArgs CORE_OPTION PASS_REGULAR_EXPRESSION FAIL_REGULAR_EXPRESSION SKIP_REGULAR_EXPRESSION)
     cmake_parse_arguments(PARSE_ARGV 0 RETRO "${options}" "${oneValueArgs}" "${multiValueArgs}")
@@ -215,6 +219,10 @@ function(add_emutest_test)
 
     if (RETRO_WILL_FAIL)
         set_tests_properties("${RETRO_NAME}" PROPERTIES WILL_FAIL TRUE)
+    endif()
+
+    if (RETRO_DISABLED)
+        set_tests_properties("${RETRO_NAME}" PROPERTIES DISABLED TRUE)
     endif()
 endfunction()
 
