Temporarily disable a test

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -242,6 +242,7 @@ add_retroarch_test(
     NAME "Core unloads with threaded software rendering"
     CONTENT "${NDS_ROM}"
     MAX_FRAMES 6
+    DISABLED
     CORE_OPTION "melonds_boot_mode=direct"
     CORE_OPTION "melonds_sysfile_mode=builtin"
     CORE_OPTION "melonds_console_mode=ds"
