Add a wrapper around libretro's HTTP library

--- a/src/libretro/CMakeLists.txt
+++ b/src/libretro/CMakeLists.txt
@@ -61,6 +61,8 @@ add_library(melondsds_libretro MODULE
     PlatformOGLPrivate.h
     retro/dirent.cpp
     retro/dirent.hpp
+    retro/http.cpp
+    retro/http.hpp
     retro/info.cpp
     retro/info.hpp
     retro/scaler.cpp
