Build with `-fms-extensions`
- To allow members to have the same name as types

--- a/src/libretro/CMakeLists.txt
+++ b/src/libretro/CMakeLists.txt
@@ -207,7 +207,7 @@ if (WIN32 AND MINGW)
 endif()
 
 if (CMAKE_CXX_COMPILER_ID STREQUAL "GNU" OR CMAKE_CXX_COMPILER_ID MATCHES "(.+)?Clang")
-    target_compile_options(melondsds_libretro PUBLIC -Werror=return-type)
+    target_compile_options(melondsds_libretro PUBLIC -Werror=return-type -fms-extensions)
 endif()
 
 target_compile_definitions(melondsds_libretro PUBLIC
