Update the split macOS build's name in a few places

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -124,7 +124,7 @@ jobs:
 
   create-release:
     name: Create Release
-    needs: [ windows, macos, linux-x86_64, linux-arm64, android, ios, tvos, test-linux-x86_64 ]
+    needs: [ windows, macos-x86_64, macos-arm64, linux-x86_64, linux-arm64, android, ios, tvos, test-linux-x86_64 ]
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
     steps:
@@ -170,7 +170,8 @@ jobs:
           body: "${{ steps.changelog.outputs.release-notes }}"
           files: |
             artifact/melondsds_libretro-win32-x86_64-Release.zip
-            artifact/melondsds_libretro-macos-universal-Release.zip
+            artifact/melondsds_libretro-macos-x86_64-Release.zip
+            artifact/melondsds_libretro-macos-arm64-Release.zip
             artifact/melondsds_libretro-linux-x86_64-Release.zip
             artifact/melondsds_libretro-linux-arm64-Release.zip
             artifact/melondsds_libretro-android-Release.zip
