Fix a broken Discord link on the issue template config

--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,5 +1,5 @@
 blank_issues_enabled: true
 contact_links:
   - name: libretro Discord Server
-    url: https://discord.gg/C4HuWSC
+    url: https://discord.gg/libretro-184109094070779904
     about: You can get support here.
